updated registration info

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ http://www.templatemo.com/tm-406-flex
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/templatemo_misc.css">
     <link rel="stylesheet" href="css/templatemo_style.css">
+    <link rel="stylesheet" href="css/dropdown.css">
     <script src="js/vendor/jquery-1.11.0.min.js"></script>
     <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
@@ -129,6 +130,7 @@ http://www.templatemo.com/tm-406-flex
         document.write(imgStr);
         document.close();
     }
+
     </script>
 </head>
 
@@ -175,11 +177,12 @@ http://www.templatemo.com/tm-406-flex
                                     <li><a href="#About">About</a></li>
                                     <!-- <li><a href="#Dates">Important Dates</a></li> -->
                                     <li><a href="#News">News</a></li>
+				    <li><a href="#Deadlines">Deadlines</a></li>
                                     <li><a href="#Keynotes">Keynotes</a></li>
                                     <li><a href="#Call">Call For papers</a></li>
                                     <li><a href="#Commitee">Organization</a></li>
                                     <li><a href="#Registration">Registration</a></li>
-                                    <li><a href="#Venue">Venue</a></li>
+				    <li><a href="#Venue">Venue</a></li>
                                 </ul>
                             </div>
                             <!-- /.main-menu -->
@@ -208,7 +211,7 @@ http://www.templatemo.com/tm-406-flex
                                     Hypertext and Social Media</h2>
                                 <p>Baltimore, Maryland</p>
                                 <p>9-12 July, 2018</p>
-                                <a href="#About" class="slider-btn">Important Dates</a>
+                                <a href="#Deadlines" class="slider-btn">Important Dates</a>
                                 <a href="https://easychair.org/conferences/?conf=ht18" target="_blank" class="slider-btn">Submission Site</a>
                             </div>
                         </li>
@@ -315,6 +318,36 @@ http://www.templatemo.com/tm-406-flex
         </div>
         <!-- /.container -->
     </div>
+
+    <!-- /#services -->
+    <div class="content-section" id="Deadlines" name="Deadlines">
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Important Dates</h2>
+            <p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span>
+                                <br />
+                                <span>Acceptance notification: 2nd April 2018</span>
+                                <br />
+                                <span>Camera ready due:  1st May 2018</span>
+                                <br />
+                                <p><span><b>Tutorial submission deadline: 2nd March 2018</b></span>
+                                    <br />
+                                <p><span><b>Blue sky ideas submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">2nd March 2018</a></b></span>
+                                    <br />
+                                    <p><span>Blue sky ideas acceptance: 2nd April 2018</span>
+                                        <br />
+                                        <p><strong>Conference:</strong> 9-12 July 2018</p>
+                                        <p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
+
+                </div>
+                <!-- /.heading-section -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </div>
+
     <!-- /#our-team -->
     <div class="content-section" id="Keynotes" name="Keynotes">
         <div class="container">
@@ -687,46 +720,6 @@ http://www.templatemo.com/tm-406-flex
         </div>
     </div>
     </div>
-    </div>
-    <div class="content-section" id="Registration" name="Registration">
-        <div class="container">
-            <div class="row">
-                <div class="heading-section col-md-12 text-left">
-                    <h2>Registration Process</h2>
-                    <p>Registration is open now, pleas follow our <a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950">portal</a> to register</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="heading-section col-md-12 text-left">
-                    <h2>Registration Fares</h2>
-                    <br> Below are the registration rates for Hypertext 2018. The registration rates are for the full conference, including workshops. It is also possible to register only for the workshops on Sunday or for the Creative Track.
-                    <h3>Advance Registration (Conference and Workshops)</h3>
-                    <br> Until 17 June 2018 ACM/SIG Members: USD 580.00 Non-ACM/SIG Members: USD 660.00 Students: USD 380.00
-                    <h3>Late Registration (Conference and Workshops)</h3>
-                    <br> Until 8 July 2018 ACM/SIG Members: USD 680.00 Non-ACM/SIG Members: USD 760.00 Students: USD 480.00
-                    <h3>Workshop-Only Registration (Advance, Late and On-Site)</h3>
-                    <br> ACM/SIG Members USD 200.00 Non-ACM/SIG Members USD 250.00 Additional Conference Banquet Tickets 1 ticket: USD 70.00
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="heading-section col-md-12 text-left">
-                    <h2>Requesting Visa Support Letters</h2>
-                    <br> ACM is able to provide visa support letters to attendees as well as authors with accepted papers, posters, or members of the conference committee. For visa support letters, refer all requests to supportletters@acm.org. ACM suggests posting this address on the conference web-site. Those requesting a letter should allow up to one week to receive it. All requests are handled in the order they are received. The information below should be included with the request.
-                    <ul>
-                        <li>Name (as it appears on attendee's passport) and mailing address</li>
-                        <li>The name of the conference attendees is registering for</li>
-                        <li>Attendee's registration confirmation number</li>
-                        <li>Authors may indicate their paper title. Speakers can provide the title of their talk.</li>
-                        <li>Include a fax number or email address of where letter can be sent</li>
-                    </ul>
-                    Please see the ACM Visa Support Letters web page for updates to this policy. ACM does not provide letters for transport of vendor
-                </div>
-            </div>
-        </div>
     </div>
     <div class="content-section" id="Commitee" name="Commitee">
         <div class="container">
@@ -1355,6 +1348,80 @@ http://www.templatemo.com/tm-406-flex
         </div>
         <!-- /.container -->
     </div>
+    <div class="content-section" id="Registration" name="Registration">
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Registration Process</h2>
+                    <p>Registration is open now, pleas follow our <a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950" target="_blank">portal</a> to register</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Registration Fares</h2>
+                    <br> Below are the registration rates for Hypertext 2018. The registration rates are for the full conference, including workshops. It is also possible to register only for the workshops on Sunday or for the Creative Track.
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-031e"></th>
+    <th class="tg-031e">ACM Members</th>
+    <th class="tg-031e">Non-ACM Members</th>
+    <th class="tg-031e">Students</th>
+  </tr>
+  <tr>
+    <td class="tg-031e">Advance Registration (Conference and Workshops)<br>(Until 17 June 2018)</td>
+    <td class="tg-031e">USD 580.00</td>
+    <td class="tg-031e">USD 660.00</td>
+    <td class="tg-031e">USD 380.00</td>
+  </tr>
+  <tr>
+    <td class="tg-031e">Late Registration (Conference and Workshops)<br>(Until 8 July 2018)</td>
+    <td class="tg-031e">USD 680.00</td>
+    <td class="tg-031e">USD 760.00</td>
+    <td class="tg-031e">USD 480.00</td>
+  </tr>
+  <tr>
+    <td class="tg-031e">Workshop-Only Registration (Advance, Late and On-Site)</td>
+    <td class="tg-031e">USD 200.00</td>
+    <td class="tg-031e">USD 250.00</td>
+    <td class="tg-031e"></td>
+  </tr>
+</table>
+
+                    <!--h3>Advance Registration (Conference and Workshops)</h3>
+                    <br> Until 17 June 2018 ACM/SIG Members: USD 580.00 Non-ACM/SIG Members: USD 660.00 Students: USD 380.00
+                    <h3>Late Registration (Conference and Workshops)</h3>
+                    <br> Until 8 July 2018 ACM/SIG Members: USD 680.00 Non-ACM/SIG Members: USD 760.00 Students: USD 480.00
+                    <h3>Workshop-Only Registration (Advance, Late and On-Site)</h3>
+                    <br> ACM/SIG Members USD 200.00 Non-ACM/SIG Members USD 250.00<--> 
+Additional Conference Banquet Tickets 1 ticket: USD 70.00
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Requesting Visa Support Letters</h2>
+                    <br> ACM is able to provide visa support letters to attendees as well as authors with accepted papers, posters, or members of the conference committee. For visa support letters, refer all requests to supportletters@acm.org. ACM suggests posting this address on the conference web-site. Those requesting a letter should allow up to one week to receive it. All requests are handled in the order they are received. The information below should be included with the request.
+                    <ul>
+                        <li>Name (as it appears on attendee's passport) and mailing address</li>
+                        <li>The name of the conference attendees is registering for</li>
+                        <li>Attendee's registration confirmation number</li>
+                        <li>Authors may indicate their paper title. Speakers can provide the title of their talk.</li>
+                        <li>Include a fax number or email address of where letter can be sent</li>
+                    </ul>
+                    Please see the ACM Visa Support Letters web page for updates to this policy. ACM does not provide letters for transport of vendor
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- /#our-team -->
     <div class="content-section" id="Venue" name="Venue">
         <div class="container">
