removed registration link

--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,9 @@ http://www.templatemo.com/tm-406-flex
             <div class="row">
                 <div class="heading-section col-md-12 text-left">
                     <h2>Registration Process</h2>
-                    <p>Registration is open now, pleas follow our <a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950" target="_blank">portal</a> to register</p>
+                    <p>Registration is open now, pleas follow our 
+		    <!--a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950" target="_blank"-->
+		    <a href="">portal</a> to register</p>
                 </div>
             </div>
         </div>
