--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ http://www.templatemo.com/tm-406-flex
                                     <li><a href="#Commitee">Organization</a></li>
                                     <li><a href="#Registration">Registration</a></li>
 				    <li><a href="#Venue">Venue</a></li>
-				    <li><a href="#Program">Program</a></li>
+				    <!--li><a href="#Program">Program</a></li-->
                                 </ul>
                             </div>
                             <!-- /.main-menu -->
