--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ http://www.templatemo.com/tm-406-flex
                     <h2>Accepted Workshops</h2>
                     <h3><a href="https://sites.google.com/view/revopid-2018" target="_blank">Opinion Mining, Summarization and Diversification (RevOpiD-2018)</a></h3>
                     <h4> Abstract </h4> The workshop aims at uncovering diverse perspectives to defining opinions. How can opinions be better summarized on online forums, in web search results or elsewhere? What relationships can be mapped between exchange of opinions on the web? We invite submissions on all such relatively unexplored dynamics of opinion mining and modeling. We also host a shared task on Review Opinion Diversification, wherein participants are asked to model opinions and mine them from an original dataset of more than 10,000 Amazon annotated product reviews.
-                    <h3><a href="http://human.iisys.de/human18/" target="_blank">Human Factors in Hypertext</a> </h3>
+                    <h3><a href="http://human.iisys.de/human18/" target="_blank">Human Factors in Hypertext (HUMAN)</a> </h3>
                     <h4>Abstract</h4> HUMAN is the first workshop of a new series for the ACM Hypertext conferences. It has a strong focus on the user and thus is complementary to the strong machine analytics research direction that could be experienced in previous conferences.The user-centric view on hypertext not only includes user interfaces and interaction, but also discussions about hypertext application domains. Furthermore, the workshop raises the question of how original hypertext ideas (e. g., Doug Engelbart’s “augmenting human intellect” or Frank Halasz’ “hypertext as a medium for thinking and communication”) can improve today’s hypertext systems.
                     <h3> <a href="http://nht.ecs.soton.ac.uk/" target="_blank">Narrative and Hypertext (NHT18)</a></h3>
                     <h4>Abstract</h4> NHT is a continuing workshop series associated with the ACM Hypertext conference. The workshop acts as forum of discussion for the narrative systems community within the wider audience of the Hypertext conference. The workshop runs both presentations from authors of accepted short research papers, and unstructured unconference sessions to provide a venue for important discussions of issues facing and opportunities for members of the narrative and hypertext community.
@@ -1494,7 +1494,7 @@ Additional Conference Banquet Tickets 1 ticket: USD 70.00
                     <div class="col-md-4 col-sm-6"-->
                     <h3> Lodging </h3>
                     <p>
-                        <li> <a href="http://www.starwoodhotels.com/sheraton/property/overview/index.html?propertyID=33&SWAQ=958P">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
+                        <li> <a href="https://www.starwoodmeeting.com/events/start.action?id=1801300829&key=363C9317">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
                         <li> Towson university student dorm (more info later) </li>
                     </p>
                     <h3> Logistics </h3>
