--- a/index.html
+++ b/index.html
@@ -275,8 +275,12 @@ http://www.templatemo.com/tm-406-flex
                 </div>
                 <!-- /.col-md-4 -->
                 <div class="col-md-4 col-sm-6">
-			            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23acmht18%20OR%20%23acmht%20OR%20%40acmht%20OR%20%23ht2018%20OR%20%23acmht2018" data-widget-id="958307339626516480">Tweets about #acmht18 OR #acmht OR @acmht OR #ht2018 OR #acmht2018</a>
+            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/acmht18" data-widget-id="964387186874368000">#acmht18 Tweets</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
+			            <!--a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23acmht18" data-widget-id="958307339626516480">Tweets about #acmht18</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script-->
 
                     <!--a class="twitter-timeline" href="https://twitter.com/ACMHT" data-width="400" data-height="600">Tweets by ACMHT</a>
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script-->
