--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> The University of Electro-Communications </td>
                         </tr>
                         <tr>
-                            <td>Donghuyn Kim </td>
+                            <td>Donghyun Kim </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Kennesaw State University </td>
                         </tr>
