updated pc and spc members

--- a/index.html
+++ b/index.html
@@ -889,11 +889,6 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Indian Institute of Technology Kharagpur </td>
                         </tr>
                         <tr>
-                            <td>Bruno Gonçalves </td>
-                            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                            <td> New York University </td>
-                        </tr>
-                        <tr>
                             <td>Charlie Hargood </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Bournemouth University </td>
@@ -1312,9 +1307,9 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> The University of Manchester </td>
                         </tr>
                         <tr>
-                            <td>Vincent Wade </td>
+                            <td>Bahareh R. Heravi</td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                            <td> Trinity College Dublin </td>
+                            <td> University College Dublin </td>
                         </tr>
                         <tr>
                             <td>Simon Walk </td>
