updated visa link

--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                     <br> Until 8 July 2018 ACM/SIG Members: USD 680.00 Non-ACM/SIG Members: USD 760.00 Students: USD 480.00
                     <h3>Workshop-Only Registration (Advance, Late and On-Site)</h3>
                     <br> ACM/SIG Members USD 200.00 Non-ACM/SIG Members USD 250.00<--> 
-Additional Conference Banquet Tickets 1 ticket: USD 70.00
+Additional Conference Banquet Tickets 1 ticket: USD 100.00
                 </div>
             </div>
         </div>
@@ -1419,7 +1419,7 @@ Additional Conference Banquet Tickets 1 ticket: USD 70.00
                         <li>Authors may indicate their paper title. Speakers can provide the title of their talk.</li>
                         <li>Include a fax number or email address of where letter can be sent</li>
                     </ul>
-                    Please see the ACM Visa Support Letters web page for updates to this policy. ACM does not provide letters for transport of vendor
+		    Please see the <a href="https://www.acm.org/special-interest-groups/volunteer-resources/conference-manual/visa-support-letters" target="_blank">ACM Visa Support Letters</a> web page for updates to this policy. ACM does not provide letters for transport of vendor
                 </div>
             </div>
         </div>
