--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ http://www.templatemo.com/tm-406-flex
                                     <li><a href="#About">About</a></li>
                                     <!-- <li><a href="#Dates">Important Dates</a></li> -->
                                     <li><a href="#News">News</a></li>
-				    <li><a href="#Deadlines">Deadlines</a></li>
+				    <li><a href="#Accepted">Program</a></li>
                                     <li><a href="#Keynotes">Keynotes</a></li>
                                     <li><a href="#Call">Call For papers</a></li>
                                     <li><a href="#Commitee">Organization</a></li>
@@ -212,7 +212,7 @@ http://www.templatemo.com/tm-406-flex
                                     Hypertext and Social Media</h2>
                                 <p>Baltimore, Maryland</p>
                                 <p>9-12 July, 2018</p>
-                                <a href="#Deadlines" class="slider-btn">Important Dates</a>
+                                <a href="#About" class="slider-btn">Important Dates</a>
                                 <a href="https://easychair.org/conferences/?conf=ht18" target="_blank" class="slider-btn">Submission Site</a>
                             </div>
                         </li>
@@ -307,11 +307,13 @@ http://www.templatemo.com/tm-406-flex
                         <li>
                             <h3>This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></li> </h3>
                             <li>
-                                <h3>List of accepted Workshops can be found <a href="#Workshops">here</a></li> </h3>
-                                <li>
+                                <h3>List of accepted Tutorials can be found <a href="accepted_tutorials.html">here</a></li> </h3>
+                            <li>
+                                <h3>List of accepted Workshops can be found <a href="accepted_workshops.html">here</a></li> </h3>
+                                <!--li>
                                     <h3> HT 2018 Call for papers are out:  <a href="./assets/HT18 Poster.pdf">Details of CFP</a> </h3></li>
                                 <li>
-                                    <h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li>
+                                    <h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li-->
                                 <li>
                                     <h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a> </h3></li>
 
@@ -325,7 +327,7 @@ http://www.templatemo.com/tm-406-flex
     </div>
 
     <!-- /#services -->
-    <div class="content-section" id="Deadlines" name="Deadlines">
+    <!--div class="content-section" id="Deadlines" name="Deadlines">
         <div class="container">
             <div class="row">
                 <div class="heading-section col-md-12 text-left">
@@ -351,7 +353,34 @@ http://www.templatemo.com/tm-406-flex
             <!-- /.row -->
         </div>
         <!-- /.container -->
-    </div>
+    </div-->
+
+    <div class="content-section" id="Accepted" name="Accepted">
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+		<h2>Program</h2>
+		<p>Detailed program coming soon!</p>
+		<table>
+			<tr>
+				<td><a href="accepted_papers.html" target=_blank>Accepted Papers</td>
+			</tr>
+			<tr>
+				<td><a href="accepted_tutorials.html" target=_blank>Accepted Tutorials</td>
+			</tr>
+			<tr>
+				<td><a href="accepted_workshops.html" target=_blank>Accepted Workshops</td>
+			</tr>
+		</table>
+                </div>
+                <!-- /.heading-section -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </div-->
+
+
 
     <!-- /#our-team -->
     <div class="content-section" id="Keynotes" name="Keynotes">
@@ -449,6 +478,23 @@ http://www.templatemo.com/tm-406-flex
                 <p>
                     Leslie Sage is the Director of Data Science at DevResults, a software company that provides a data management platform for the international development community. She has implemented DevResults software for use in over 60 countries by clients overseeing billion-dollar international development organizations and created training programs in data management. Previously, Leslie worked with the Obama Presidential Campaign in 2012 as Deputy Data Director for the battleground state of Iowa. In that position Leslie leveraged voter models to allocate campaign resources, created up-to-the-minute dashboards for decision-makers, and discovered Midwestern craft beers. Leslie hold a Ph.D. in Microvascular Physiology from the University of Bristol in England (2012) and a B.A. in Cognitive Science from Rice University (2004). Her research took her to the Hospital for Infectious Diseases in Ho Chi Minh City, Vietnam, where she collaborated with the Gates Foundation and Oxford University to develop a new way to study dengue infection.
                 </p>
+                <h2> Abstract </h2>
+		<p><b>Data and Design in International Development</b></p>
+		<p>
+		Foreign aid is a $150 billion dollar industry, but the skills and tools for using data in international
+development are in their infancy. Herculean efforts to overhaul systems of agriculture, education,
+sanitation, and health go unexamined because collecting that information is hard. Dr. Leslie Sage will
+introduce the challenges in this field and discuss how her company, DevResults, has addressed many of
+these obstacles. At the heart of every incremental gain are tools for connecting data to context, tools to
+derive useful information from related data, and expansion of interoperability. Forget big data; these
+organizations are tracking information that doesn't begin in electronic format, like school refurbishments
+and job trainings, then storing it in unstructured documents on inaccessible hard drives around the globe.
+These data are small but mighty, offering the chance to reduce disease, improve education, and lift people
+out of poverty. Making decisions with this data should be low-hanging fruit without the need for sexy math
+or the latest tools for handling terabytes of data. Developmental and humanitarian work is shifting to
+structured data in the cloud, but there’s a long way to go in designing web-based tools for this
+community. ACM attendees will be invited to lend their expertise to the cause.
+		</p>
             </div>
             <div class="SethBio" style="display:none;">
                 <h2> Biography </h2>
