Add blue sky accepted papers

--- a/Call_Blue_Sky.html
+++ b/Call_Blue_Sky.html
@@ -154,14 +154,31 @@ http://www.templatemo.com/tm-406-flex
         <br>
         <br>
         <br>
+        <div class="content-section" id="News" name="Call">
+            <div class="container">
+                <div class="row">
+                    <div class="heading-section col-md-12 text-left">
+                        <h2>Winners of Blue sky Best paper</h2>
+                        <p>
+                         We received five good submissions, of which the three best were accepted for presentation at
+                         the conference.The titles of the accepted submissions, ranked by their review scores, are:
+                        <ul>
+                            <li><b>First place:</b> Charlie Hargood, Fred Charles and David Millard: “Intelligent Generative Locative Hyperstructure” </li>
+                            <li><b>Second Place:</b> Mark Bernstein and Clare Hooper:  “A Villain’s Guide to Social Media and Web Science” </li>
+                            <li><b>Third Place:</b> Mark Bernstein. “As We May Hear: Our Slaves of Steel II” </li>
+                        </ul>
+                        Congratulations
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="content-section" id="Call" name="Call">
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
                         <h2>Call for Blue Sky Ideas</h2>
                         <p>
-                            This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the given submission <a href="http://www.acm.org/publications/proceedings-template">template</a> and are to be submitted at our <a href="https://easychair.org/conferences/?conf=ht18">easychair submission site</a>. Thanks to CCC sponsorship, the top 3 papers submitted to this track will be awarded with travel grants of $1000, $750 and $500 respectively. Successful submissions will be published in the regular proceedings. 
-All submissions to this special track will be evaluated by a dedicated committee consisting of Mark Bernstein (Eastgate), Krishna Gummadi (Max Planck Institute for Software Systems), Charlie Hargood (Bournemouth University), David Millard (University of Southampton), Nishanth Sastry (King's College London) and Ingmar Weber (Qatar Computing Research Institute).
+                            This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the given submission <a href="http://www.acm.org/publications/proceedings-template">template</a> and are to be submitted at our <a href="https://easychair.org/conferences/?conf=ht18">easychair submission site</a>. Thanks to CCC sponsorship, the top 3 papers submitted to this track will be awarded with travel grants of $1000, $750 and $500 respectively. Successful submissions will be published in the regular proceedings. All submissions to this special track will be evaluated by a dedicated committee consisting of Mark Bernstein (Eastgate), Krishna Gummadi (Max Planck Institute for Software Systems), Charlie Hargood (Bournemouth University), David Millard (University of Southampton), Nishanth Sastry (King's College London) and Ingmar Weber (Qatar Computing Research Institute).
                         </p>
                         <h3>Deadlines</h3>
                         <ul>
