--- a/index.html
+++ b/index.html
@@ -304,19 +304,11 @@ http://www.templatemo.com/tm-406-flex
                     <h2>News</h2>
                     <ul>
                         <li> <h3> Registration info is up. Please see <a href="#Registration">here</a></h3></li>
-                        <li>
-                            <h3>This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></li> </h3>
-                            <li>
-                                <h3>List of accepted Tutorials can be found <a href="accepted_tutorials.html">here</a></li> </h3>
-                            <li>
-                                <h3>List of accepted Workshops can be found <a href="accepted_workshops.html">here</a></li> </h3>
-                                <!--li>
-                                    <h3> HT 2018 Call for papers are out:  <a href="./assets/HT18 Poster.pdf">Details of CFP</a> </h3></li>
-                                <li>
-                                    <h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li-->
-                                <li>
-                                    <h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a> </h3></li>
-
+                        <li> <h3> This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></h3></li>
+                        <li> <h3> List of accepted Tutorials can be found <a href="accepted_tutorials.html">here</a></h3></li> 
+                        <li> <h3> List of accepted Workshops can be found <a href="accepted_workshops.html">here</a></h3></li> 
+                        <li> <h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a></h3></li>
+                        <li> <h3> Accepted papers for the Blue Sky track are announced <a href="Call_Blue_Sky.html#News">here</a></h3></li>
                     </ul>
                 </div>
                 <!-- /.heading-section -->
