--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ community. ACM attendees will be invited to lend their expertise to the cause.
                     Seth Stephens-Davidowitz has used data from the internet -- particularly Google searches -- to get new insights into the human psyche. Seth has used Google searches to measure racism, self-induced abortion, depression, child abuse, hateful mobs, the science of humor, sexual preference, anxiety, son preference, and sexual insecurity, among many other topics.
                 </p>
 		<h2>Abstract</h2>
-		<p>Title: <b>Lessons in Search Data</b></p>
+		<p><b>Lessons in Search Data</b></p>
 		<p>Seth will discuss what Google searches can teach us about racism, sexuality, mental illness, and other topics.</p>
             </div>
             <div class="ElizabethBio" style="display:none;">
