updated accepted papers

--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -158,7 +158,57 @@ http://www.templatemo.com/tm-406-flex
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
                         <h2>Accepted Papers</h2>
-			<p>Coming soon!</p>
+			<h3>Full papers</h3>
+			<table>
+			<ul>
+				<tr><td><li><b>IntelliEye: Enhancing MOOC Learners' Video Watching Experience with Real-Time Attention Tracking,</b>&nbsp;Tarmo Robal, Yue Zhao, Christoph Lofi and Claudia Hauff</li></td></tr>
+				<tr><td><li><b>Know Thy Neighbors, and More! Studying the Role of Context in Entity Recommendation,</b>&nbsp;&nbsp;Sumit Bhatia and Harit Vishwakarma</li></td></tr>
+				<tr><td><li><b>Stance Classification through Proximity-based Community Detection,</b>&nbsp;&nbsp;Ophélie Fraisier, Guillaume Cabanac, Yoann Pitarch, Romaric Besançon and Boughanem Mohand</li></td></tr>
+				<tr><td><li><b>A Collaborative Filtering Method for Handling Diverse and Repetitive User-Item Interactions,</b>&nbsp;&nbsp;Oren Sar Shalom, Haggai Roitman, Amihood Amir and Alex Karatzoglou</li></td></tr>
+				<tr><td><li><b>Joint Distributed Representation of Text and Structure of Semi-Structured Documents,</b>&nbsp;&nbsp;Abhishek Laddha, Salil Joshi, Samiulla Shaikh and Sameep Mehta</li></td></tr>
+				<tr><td><li><b>Securing Social Media User Data - An Adversarial Approach,</b>&nbsp;&nbsp;Ghazaleh Beigi, Kai Shu, Yanchao Zhang and Huan Liu</li></td></tr>
+				<tr><td><li><b>An Approximately Optimal Bot for Non-Submodular Social Reconnaissance,</b>&nbsp;&nbsp;J. David Smith, Alan Kuhnle and My Thai</li></td></tr>
+				<tr><td><li><b>Mining and Forecasting Career Trajectories of Music Artists,</b>&nbsp;&nbsp;Shushan Arakelyan, Fred Morstatter, Margaret Martin, Emilio Ferrara and Aram Galstyan</li></td></tr>
+				<tr><td><li><b>Search Rank Fraud De-Anonymization in Online Systems,</b>&nbsp;&nbsp;Mizanur Rahman, Nestor Hernandez, Bogdan Carbunar and Duen Horng Chau</li></td></tr>
+				<tr><td><li><b>Narrative Plot Comparison Based on a Bag-of-actors Document Model,</b>&nbsp;&nbsp;Sharath Srivatsa and Srinath Srinivasa</li></td></tr>
+				<tr><td><li><b>A Deep Joint Network for Session-based News Recommendations with Contextual Augmentation,</b>&nbsp;&nbsp;Lemei Zhang, Peng Liu and Jon Atle Gulla</li></td></tr>
+				<tr><td><li><b>SimilarHITs : Revealing the Role of Task Similarity in Microtask Crowdsourcing,</b>&nbsp;&nbsp;Ujwal Gadiraju</li></td></tr>
+				<tr><td><li><b>The StoryPlaces Platform: Building a Web-Based Locative Hypertext System,</b>&nbsp;&nbsp;Charlie Hargood, Mark Weal and David Millard</li></td></tr>
+				<tr><td><li><b>Bootstrapping Web Archive Collections from Social Media,</b>&nbsp;&nbsp;Alexander Nwala, Michele Weigle and Michael Nelson</li></td></tr>
+				<tr><td><li><b>Studying the Spatio-Temporal Dynamics of Small-Scale Events in Twitter,</b>&nbsp;&nbsp;Paul Mousset, Yoann Pitarch and Lynda Tamine</li></td></tr>
+				<tr><td><li><b>Detecting the correlation between sentiment and user- as well as text-level meta-data from benchmark corpora,</b>&nbsp;&nbsp;Shubhanshu Mishra and Jana Diesner</li></td></tr>
+				<tr><td><li><b>Learning to rank social bots,</b>&nbsp;&nbsp;Diego Perna and Andrea Tagarelli</li></td></tr>
+				<tr><td><li><b>Understanding Privacy Dichotomy in Twitter,</b>&nbsp;&nbsp;Taraneh Khazaei, Lu   Xiao, Robert Mercer and Atif Khan</li></td></tr>
+				<tr><td><li><b>Sentiment-driven Community Profiling and Detection on Social Media,</b>&nbsp;&nbsp;Amin Salehi, Mert Ozer and Hasan Davulcu</li></td></tr>
+			</ul>
+			</table>
+			<h3>Short papers</h3>
+			<table>
+			<ul>
+				<tr><td><li><b>Content Driven Enrichment of Formal Text Using Concept Definitions and Applications,</b>&nbsp;&nbsp;Abhinav Jain, Nitin Gupta, Shashank Mujumdar, Sameep Mehta and Rishi Madhok</li></td></tr>
+				<tr><td><li><b>As Stable As You Are: Re-ranking Search Results using Query-Drift Analysis,</b>&nbsp;&nbsp;Haggai Roitman, Ella Rabinovich and Oren Sar Shalom</li></td></tr>
+				<tr><td><li><b>Dynamics and Prediction of Clicks on News from Twitter,</b>&nbsp;&nbsp;Arthi Ramachandran, Lucy Wang and Augustin Chaintreau</li></td></tr>
+				<tr><td><li><b>Recommending Teammates with Deep Neural Networks,</b>&nbsp;&nbsp;Palash Goyal, Anna Sapienza and Emilio Ferrara</li></td></tr>
+				<tr><td><li><b>Mother - An Integrated Approach to Hypertext Domains,</b>&nbsp;&nbsp;Claus Atzenbeck, Daniel Roßner and Manolis Tzagarakis</li></td></tr>
+				<tr><td><li><b>Embedding Networks with Edge Attributes,</b>&nbsp;&nbsp;Palash Goyal, Homa Hosseinmardi, Emilio Ferrara and Aram Galstyan</li></td></tr>
+				<tr><td><li><b>VAnnotatoR: A Framework for Generating Multimodal Hypertexts,</b>&nbsp;&nbsp;Alexander Mehler, Giuseppe Abrami, Christian Spiekermann and Matthias Jostock</li></td></tr>
+				<tr><td><li><b>The Utility Problem of Web Content Popularity Prediction,</b>&nbsp;&nbsp;Nuno Moniz and Luis Torgo</li></td></tr>
+				<tr><td><li><b>Privacy-Aware Tag Recommendation for Image Sharing,</b>&nbsp;&nbsp;Ashwini Tonge, Cornelia Caragea and Anna Squicciarini</li></td></tr>
+				<tr><td><li><b>To Post or Not to Post: Using Online Trends to Predict Popularity of Offline Content,</b>&nbsp;&nbsp;Sofiane Abbar, Carlos Castillo and Antonio Sanfilippo</li></td></tr>
+				<tr><td><li><b>Penny Auctions are Predictable: Predicting and profiling user behavior on DealDash,</b>&nbsp;&nbsp;Xinyi Zhang, Shawn Shan, Shiliang Tang, Haitao Zheng and Ben Y. Zhao</li></td></tr>
+				<tr><td><li><b>Predicting Twitter User Socioeconomic Attributes with Network and Language Information,</b>&nbsp;&nbsp;Nikolaos Aletras and Ben Chamberlain</li></td></tr>
+				<tr><td><li><b>Modeling Semantics Between Programming Codes and Annotations,</b>&nbsp;&nbsp;Yihan Lu and Sharon Hsiao</li></td></tr>
+				<tr><td><li><b>Content Driven Enrichment of Formal Text Using Concept Definitions and Applications,</b>&nbsp;&nbsp;Abhinav Jain, Nitin Gupta, Shashank Mujumdar, Sameep Mehta and Rishi Madhok</li></td></tr>
+			</ul>
+			</table>
+			<h3>Blue Sky Track papers</h3>
+			<table>
+			<ul>
+				<tr><td><li><b>Intelligent Generative Locative Hyperstructure,</b>&nbsp;&nbsp;Charlie Hargood, Fred Charles and David Millard</li></td></tr>
+				<tr><td><li><b>A Villain's Guide to Social Media and Web Science,</b>&nbsp;&nbsp;Mark Bernstein and Clare Hooper</li></td></tr>
+				<tr><td><li><b>As We May Hear: Our Slaves of Steel II,</b>&nbsp;&nbsp;Mark Bernstein</li></td></tr>
+			</ul>
+			</table>
                             
                     </div>
                     <!-- /.heading-section -->
