--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@ http://www.templatemo.com/tm-406-flex
                 <div class="heading-section col-md-12 text-left">
                     <h2>News</h2>
                     <ul>
+                        <li> <h3> The list of accepted papers can be found <a href="accepted_papers.html">here</a></h3></li>
                         <li> <h3> Registration info is up. Please see <a href="#Registration">here</a></h3></li>
                         <li> <h3> This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></h3></li>
                         <li> <h3> List of accepted Tutorials can be found <a href="accepted_tutorials.html">here</a></h3></li> 
