added registration box

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ http://www.templatemo.com/tm-406-flex
                                     <li><a href="#Keynotes">Keynotes</a></li>
                                     <li><a href="#Call">Call For papers</a></li>
                                     <li><a href="#Commitee">Organization</a></li>
-                                    <li><a href="#Registration">Registration</a></li>
+				    <li><a href="#Registration">Registration</a></li>
 				    <li><a href="#Venue">Venue</a></li>
 				    <!--li><a href="#Program">Program</a></li-->
                                 </ul>
@@ -213,7 +213,8 @@ http://www.templatemo.com/tm-406-flex
                                 <p>Baltimore, Maryland</p>
                                 <p>9-12 July, 2018</p>
                                 <a href="#About" class="slider-btn">Important Dates</a>
-                                <a href="https://easychair.org/conferences/?conf=ht18" target="_blank" class="slider-btn">Submission Site</a>
+                                <a href="#Registration" class="slider-btn">Registration</a>
+                                <!--a href="https://easychair.org/conferences/?conf=ht18" target="_blank" class="slider-btn">Submission Site</a-->
                             </div>
                         </li>
                     </ul>
