--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@ All submissions to this special track will be evaluated by a dedicated committee
             <div class="row">
                 <div class="heading-section col-md-12 text-left">
                     <h2>Registration Process</h2>
-                    <p>Registration is open now, pleas follow our 
+                    <p>Registration is open now, please follow our 
 		    <!--a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950" target="_blank"-->
 		    <a href="https://www.regonline.com/acmhypertext2018">portal</a> to register</p>
                 </div>
