added local co chair

--- a/index.html
+++ b/index.html
@@ -791,6 +791,14 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Towson U., USA</td>
                         </tr>
                         <tr>
+                            <td><b>Local Chair</b></td>
+                            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                            <td> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/sacharya.html" target=_blank>Subrata Acharya</a></td>
+                            <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                            <td> Towson U., USA</td>
+                        </tr>
+
+                        <tr>
                             <td><b>Program Co-chair</b></td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></td>
