updated keynote talk abstract

--- a/index.html
+++ b/index.html
@@ -466,6 +466,20 @@ http://www.templatemo.com/tm-406-flex
                 <p>
                     Ben Zhao is the Neubauer Professor of Computer Science at University of Chicago. He completed his PhD from Berkeley (2004) and his BS from Yale (1997). He is an ACM distinguished scientist, and recipient of the NSF CAREER award, MIT Technology Review's TR-35 Award (Young Innovators Under 35), ComputerWorld Magazine's Top 40 Tech Innovators award, Google Faculty award, and IEEE ITC Early Career Award. His work has been covered by media outlets such as New York Times, Boston Globe, LA Times, MIT Tech Review, and Slashdot. He has published more than 150 publications in areas of security and privacy, networked systems, wireless networks, data-mining and HCI (H-index 58). His most recent work looks closely at the role of machine learning and neural networks in generating and detecting synthetic and altered content online. He recently served as TPC co-chair for the World Wide Web Conference (WWW 2016) and will be PC-chair for the upcoming ACM Internet Measurement Conference (IMC 2018).
                 </p>
+                <h2> Abstract </h2>
+		<p><b>
+			Insecure Machine Learning Systems and Their Impact on the Web
+		</b></p>
+		<p>
+		Increasingly powerful machine learning models are often seen as a panacea to a wide range of computational problems
+today.  There is an unsustainable level of excitement over recent results in solving systems problems using deep
+learning techniques, leading to a rush to deploy ML-based systems in countries around the world. In this talk, I
+will consider some of the negative implications of these powerful but opaque models from two angles. I will discuss
+vulnerabilities inherent in many of today's deep learning models, as well as the dangers of advanced ML tools used
+by malicious attackers. I believe that these critical issues must be addressed adequately before the wide-spread
+adoption of deep learning tools in today’s security critical applications.
+		</p>
+
             </div>
             <div class="SageBio" style="display:none;">
                 <h2> Biography </h2>
